Fixed text-overflow

--- a/web/bundles/dodicifansworldweb/less/home.less
+++ b/web/bundles/dodicifansworldweb/less/home.less
@@ -246,6 +246,10 @@ section.home-content {
                         margin-top: 20px;
                         margin-left: 20px;
                         display: block;
+                        line-height: normal !important;
+                        text-overflow: ellipsis;
+                        height: 50px;
+                        overflow: hidden;
                     }
                     
                     .user {
@@ -253,10 +257,11 @@ section.home-content {
                         position: relative;
                         width: 100%;
                         color: @green;
-                        margin-top: 50px;
+                        margin-top: 11px;
                         margin-left: 20px;
                         font-size: 15px;
                         font-weight: 300;
+                        line-height: normal !important;
                     }
                 }
              }
